# sae

./: .gitignore  README.md  a.diff  app.py  data.py  pyproject.toml  sae.py  train.py
data/: get_activations.py  tokenize_dataset.py
static/: index.html  script.js  styles.css
